# bdict

./: .gitignore  CMakeLists.txt  README.md  dict_parser.cpp  hashMapDict.cpp  hashMapDict.hpp  hashMapTree.cpp  hashMapTree.hpp  m.sh  main.cpp  mixDict.cpp  mixDict.hpp  pinyin_consts.hpp  r.sh  sortedVector.hpp  wordNode.hpp  xmake.lua
common/: common.hpp
container/: graph.hpp
pinyinEncoder/: consts.hpp  parser.cpp  parser.hpp  types.hpp
resources/: dict.yml  dict_2000.yml  dict_parser.cpp
